--- a/app/assets/stylesheets/pages/_mine.scss
+++ b/app/assets/stylesheets/pages/_mine.scss
@@ -38,14 +38,14 @@
 
 .tab-titles .active {
   font-weight: bold;
-  color: #007bff;
+  color: $orangy;
   background-color: #f9f9f9;
   border-bottom: 2px solid transparent;
   text-decoration: none;
 }
 
 .tab-titles a:hover {
-  color: #007bff;
+  color: $orangy;
   background-color: #f1f1f1;
   text-decoration: none;
 }
@@ -119,5 +119,10 @@
 }
 
 .status img {
+  width: 16px;
+}
+
+.icon {
+  height: 16px;
   width: 16px;
 }
