--- a/app/views/games/mine.html.erb
+++ b/app/views/games/mine.html.erb
@@ -20,7 +20,9 @@
 
           <div class="info">
             <span>Created by <%= game.players.first.nickname %></span>
-            <p>📍Paris</p>
+            <div>
+          <img src="/images/location.svg" alt="User Icon" class="icon"> <span>Paris</span>
+        </div>
           </div>
 
 
@@ -35,22 +37,22 @@
           </div>
 
           <div class="status">
-            <div>
-              👤 <span><%= game.players.count %></span>
-            </div>
-            <% if game.duration.present? %>
-              <div>
-                ⏳ <span><%= game.duration %> days</span>
-              </div>
-            <% else %>
-              <div>
-                ⏳ <span>Duration unknown</span>
-              </div>
-            <% end %>
-          </div>
+        <div>
+          <img src="/images/players.svg" alt="User Icon" class="icon"> <span><%= game.players.count %></span>
         </div>
-      <% end %>
+        <% if game.duration.present? %>
+          <div>
+            <img src="/images/sablier.svg" alt="Timer Icon" class="icon"> <span><%= game.duration %> days</span>
+          </div>
+        <% else %>
+          <div>
+            <img src="/images/msg.svg" alt="Timer Icon" class="icon"> <span>Duration unknown</span>
+          </div>
+        <% end %>
+      </div>
     </div>
+  <% end %>
+</div>
 
     <div id="tab-pending" data-tabs-target="content" class="tab-content hidden">
 
@@ -60,7 +62,9 @@
 
           <div class="info">
             <span>Created by <%= game.players.first.nickname %></span>
-            <p>📍Paris</p>
+             <div>
+          <img src="/images/location.svg" alt="User Icon" class="icon"> <span>Paris</span>
+        </div>
           </div>
 
           <div class="mapy">
@@ -73,22 +77,22 @@
           </div>
 
           <div class="status">
-            <div>
-              👤 <span><%= game.players.count %> / <%= game.nb_of_players %></span>
-            </div>
-            <% if game.duration.present? %>
-              <div>
-                ⏳ <span><%= game.duration %> days</span>
-              </div>
-            <% else %>
-              <div>
-                ⏳ <span>Duration unknown</span>
-              </div>
-            <% end %>
-          </div>
+        <div>
+          <img src="/images/players.svg" alt="User Icon" class="icon"> <span><%= game.players.count %></span>
         </div>
-      <% end %>
+        <% if game.duration.present? %>
+          <div>
+            <img src="/images/sablier.svg" alt="Timer Icon" class="icon"> <span><%= game.duration %> days</span>
+          </div>
+        <% else %>
+          <div>
+            <img src="/images/msg.svg" alt="Timer Icon" class="icon"> <span>Duration unknown</span>
+          </div>
+        <% end %>
+      </div>
     </div>
+  <% end %>
+</div>
 
     <div id="tab-finished" data-tabs-target="content" class="tab-content hidden">
 
@@ -98,7 +102,9 @@
 
           <div class="info">
             <span>Created by <%= game.players.first.nickname %></span>
-            <p>📍Paris</p>
+             <div>
+                <img src="/images/location.svg" alt="User Icon" class="icon"> <span>Paris</span>
+             </div>
           </div>
 
           <div class="mapy">
@@ -112,21 +118,21 @@
           </div>
 
           <div class="status">
-            <div>
-              🎮 <span><%= game.players.count %> / <%= game.nb_of_players %> players</span>
-            </div>
-            <% if game.duration.present? %>
-              <div>
-                ⏳ <span><%= game.duration %> days</span>
-              </div>
-            <% else %>
-              <div>
-                ⏳ <span>Duration unknown</span>
-              </div>
-            <% end %>
-          </div>
+        <div>
+          <img src="/images/players.svg" alt="User Icon" class="icon"> <span><%= game.players.count %></span>
         </div>
-      <% end %>
+        <% if game.duration.present? %>
+          <div>
+            <img src="/images/sablier.svg" alt="Timer Icon" class="icon"> <span><%= game.duration %> days</span>
+          </div>
+        <% else %>
+          <div>
+            <img src="/images/msg.svg" alt="Timer Icon" class="icon"> <span>Duration unknown</span>
+          </div>
+        <% end %>
+      </div>
     </div>
+  <% end %>
+</div>
   </div>
 </div>
