--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -61,7 +61,7 @@
       </div>
     </div>
   </div>
-  <<% if !@game.players.include?(current_player)  %>
+<% if !@game.players.include?(current_player)  %>
          <%= button_to "JOIN THIS GAME", game_game_players_path(@game), method: :post, class: "join-game-card" %>
 <% end %>
 
