--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -19,15 +19,30 @@
   <div class="text-center mt-3 pt-4">
     <div class="position-relative d-inline-block">
       <div class="rounded-circle bg-primary" style="width: 89px; height: 89px;">
-        <i class="fa-solid fa-user text-white fs-1 d-flex justify-content-center align-items-center"  style="height: 100%;"></i>
-        <%# <form action="/upload" method="POST" enctype="multipart/form-data">
-          <input type="file" name="photo" id="photoUpload">
-        </form> %>
+        <i class="fa-solid fa-user text-white fs-1 d-flex justify-content-center align-items-center" style="height: 100%;">
+          <!-- app/views/articles/index.html.erb -->
+          <% if current_player.photo.attached? %>
+            <%= cl_image_tag(current_player.photo.key, width: 400, height: 300, crop: :fill) %>
+          <% else %>
+            <%= image_tag "avatar.svg" %>
+          <% end %>
+
+          <!-- for face detection -->
+          <%#= cl_image_tag("IMAGE_WITH_FACE_ID",
+              width: 150, height: 150, crop: :thumb, gravity: :face) %>
+        </i>
+
       </div>
+
+      <%= link_to "edit", edit_player_registration_path %>
+
       <button class="btn btn-light position-absolute top-0 start-100 translate-middle p-0 rounded-circle border" id="profileButton" style="width: 25px; height: 25px;">
         <i class="fa-regular fa-pen-to-square"></i>
         <input type="file" class="form-control-file" id="photoUpload" accept="image/*" style="opacity: 0; position: absolute; top: 0; left: 0; width: 25px; height: 25px; cursor: pointer;">
       </button>
+
+
+
     </div>
     <h1 class="mt-3 fs-2 fw-bold">
     <%= @username %>
