--- a/app/views/games/mine.html.erb
+++ b/app/views/games/mine.html.erb
@@ -12,117 +12,93 @@
       </li>
     </ul>
 
+    <!-- Onglet Ongoing -->
     <div id="tab-ongoing" data-tabs-target="content" class="tab-content hidden">
-
       <% @games.select { |game| game.status == "ongoing" }.each do |game| %>
         <div class="card">
           <h2><%= link_to game.name, game_path(game), class: "card-title" %></h2>
-
           <div class="info">
             <span>Created by <%= game.players.first.nickname %></span>
             <p>📍Paris</p>
           </div>
-
-
           <div class="mapy">
-            <div id="map-<%= game.id %>"style="width: 100%; height: 300px;"
+            <div id="map-<%= game.id %>" style="width: 100%; height: 300px;"
                  data-controller="mapongoing"
                  data-mapongoing-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>"
-                 data-mapongoing-latitude-value="<%= game.latitude %>"
-                 data-mapongoing-longitude-value="<%= game.longitude %>"
                  data-mapongoing-layers-value="<%= game.instance_variable_get(:@layers).to_json %>">
             </div>
           </div>
-
           <div class="status">
-            <div>
-              👤 <span><%= game.players.count %></span>
-            </div>
+            <div>👤 <span><%= game.players.count %></span></div>
             <% if game.duration.present? %>
-              <div>
-                ⏳ <span><%= game.duration %> days</span>
-              </div>
+              <div>⏳ <span><%= game.duration %> days</span></div>
             <% else %>
-              <div>
-                ⏳ <span>Duration unknown</span>
-              </div>
+              <div>⏳ <span>Duration unknown</span></div>
             <% end %>
           </div>
         </div>
       <% end %>
     </div>
 
+    <!-- Onglet Pending -->
     <div id="tab-pending" data-tabs-target="content" class="tab-content hidden">
-
       <% @games.select { |game| game.status == "pending" }.each do |game| %>
         <div class="card">
           <h2><%= link_to game.name, game_path(game), class: "card-title" %></h2>
-
           <div class="info">
             <span>Created by <%= game.players.first.nickname %></span>
             <p>📍Paris</p>
           </div>
-
-          <div class="mapy">
-            <div id="map" style="width: 100%; height: 300px;"
+          <div class="mapy" style="position: relative;">
+            <div id="map-<%= game.id %>" style="width: 100%; height: 300px;"
                  data-controller="mappending"
                  data-mappending-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>"
                  data-mappending-latitude-value="<%= game.latitude %>"
                  data-mappending-longitude-value="<%= game.longitude %>">
             </div>
+            <% if game.game_players.first.player == current_player %>
+              <div class="action-buttons">
+                <%= link_to "✎", edit_game_path(game), class: "edit-button" %>
+                    <%= link_to "X", game_path(game),
+                  data: { turbo_method: :delete, confirm: "Are you sure you want to delete this game?" },
+                  class: "delete-button" %>
+              </div>
+            <% end %>
           </div>
-
           <div class="status">
-            <div>
-              👤 <span><%= game.players.count %> / <%= game.nb_of_players %></span>
-            </div>
+            <div>👤 <span><%= game.players.count %> / <%= game.nb_of_players %></span></div>
             <% if game.duration.present? %>
-              <div>
-                ⏳ <span><%= game.duration %> days</span>
-              </div>
+              <div>⏳ <span><%= game.duration %> days</span></div>
             <% else %>
-              <div>
-                ⏳ <span>Duration unknown</span>
-              </div>
+              <div>⏳ <span>Duration unknown</span></div>
             <% end %>
           </div>
         </div>
       <% end %>
     </div>
 
+    <!-- Onglet Finished -->
     <div id="tab-finished" data-tabs-target="content" class="tab-content hidden">
-
       <% @games.select { |game| game.status == "finished" }.each do |game| %>
         <div class="card">
           <h2><%= link_to game.name, game_path(game), class: "card-title" %></h2>
-
           <div class="info">
             <span>Created by <%= game.players.first.nickname %></span>
             <p>📍Paris</p>
           </div>
-
           <div class="mapy">
-            <div id="map-<%= game.id %>"style="width: 100%; height: 300px;"
+            <div id="map-<%= game.id %>" style="width: 100%; height: 300px;"
                  data-controller="mapongoing"
                  data-mapongoing-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>"
-                 data-mapongoing-latitude-value="<%= game.latitude %>"
-                 data-mapongoing-longitude-value="<%= game.longitude %>"
                  data-mapongoing-layers-value="<%= game.instance_variable_get(:@layers).to_json %>">
             </div>
           </div>
-
           <div class="status">
-            <div>
-              🎮 <span><%= game.players.count %> / <%= game.nb_of_players %> players</span>
-            </div>
+            <div>🎮 <span><%= game.players.count %> / <%= game.nb_of_players %> players</span></div>
             <% if game.duration.present? %>
-              <div>
-                ⏳ <span><%= game.duration %> days</span>
-              </div>
+              <div>⏳ <span><%= game.duration %> days</span></div>
             <% else %>
-              <div>
-                ⏳ <span>Duration unknown</span>
-              </div>
+              <div>⏳ <span>Duration unknown</span></div>
             <% end %>
           </div>
         </div>
