--- a/app/assets/stylesheets/components/_avatar.scss
+++ b/app/assets/stylesheets/components/_avatar.scss
@@ -18,3 +18,13 @@
   box-shadow: 0 1px 2px rgba(0,0,0,0.2);
   border: white 1px solid;
 }
+
+.avatar-base {
+  border-radius: 50%;
+  object-fit: cover;
+}
+
+.fa-pen-to-square {
+  font-size: 20px;
+  color: black;
+}
