--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -18,12 +18,12 @@ $yelo: #f8e36d;
 $cream: #FFFDF9;
 
 
-$player1: #a2922d;
+$player1: #2da25a;
 $player2: #FF5964;
 $palyer3: #38618C;
 $player4: #35A7FF;
 $palyer5: #ad72b3;
-$player6: #61fab8;
+$player6: #de3a5d;
 $palyer7: #f29451;
 $player8: #1c3d56;
 $palyer9: #51cff2;
