--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -164,7 +164,7 @@ body {
   border-radius: 50%;
   margin: 0 auto 5px;
   background-color: #ddd;
-  border: rgb(251, 255, 0) solid;
+  border: 5px solid rgb(255, 204, 0);
 }
 
 .playerimgsecond{
@@ -203,6 +203,17 @@ body {
   color: #555;
 }
 
+// .rankongoing {
+//   display: flex;
+//   justify-content: space-between;
+//   padding: 5px 10px;
+//   background: #f9f9f9;
+//   margin-bottom: 5px;
+//   border-radius: 5px;
+//   font-size: 0.9em;
+//   color: #faf9f9;
+// }
+
 .rank.pending {
   display: flex;
   justify-content: space-between;
@@ -228,7 +239,7 @@ body {
 
 .rank.first {
 
-  border: 3px solid $yelo;
+  border: 4px solid $yelo;
 }
 
 .rank.player {
