--- a/app/assets/stylesheets/pages/_mine.scss
+++ b/app/assets/stylesheets/pages/_mine.scss
@@ -143,6 +143,10 @@
   transition: background-color 0.3s ease, color 0.3s ease;
 }
 
+.mapy {
+  position: relative;
+}
+
 .edit-button {
   background-color: #007bff; /* Couleur bleue pour modifier */
 }
