--- a/app/views/games/mine.html.erb
+++ b/app/views/games/mine.html.erb
@@ -25,11 +25,12 @@
           </div>
           <div class="mapy">
             <div id="map-<%= game.id %>" style="width: 100%; height: 300px;"
-                 data-controller="mapongoing"
-                 data-mapongoing-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>"
-                 data-mapongoing-latitude-value="<%= game.latitude %>"
-                 data-mapongoing-longitude-value="<%= game.longitude %>"
-                 data-mapongoing-layers-value="<%= Games::ComputeRunsLayers.new(game).call.to_json %>">
+                data-controller="mapongoing"
+                data-mapongoing-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>"
+                data-mapongoing-latitude-value="<%= game.latitude %>"
+                data-mapongoing-longitude-value="<%= game.longitude %>"
+                data-mapongoing-layers-value="<%= Games::ComputeRunsLayers.new(game).call.to_json %>"
+                data-mapongoing-coordinate-layer-value="<%= game.coordinate_layer.to_json %>">
             </div>
           </div>
           <div class="status">
