--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -70,7 +70,8 @@
            style="width: 100%; height: 400px;"
            data-controller="mapongoing"
            data-mapongoing-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>"
-           data-mapongoing-layers-value="<%= @layers.to_json %>">
+           data-mapongoing-layers-value="<%= @layers.to_json %>"
+           data-mapongoing-coordinate-layer-value="<%= @game.coordinate_layer.to_json %>">
       </div>
     </div>
     <div class="details">
