--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -20,7 +20,7 @@
     <% current_game = Game.find_by(id: params[:id]) %>
     <% if current_game&.status == "ongoing" %>
       <div class="navbar-item refresh-icon">
-        <%= link_to update_runs_game_path(current_game), class: "btn btn-primary", data: { turbo_method: :post } do %>
+        <%= link_to update_runs_game_path(current_game), data: { turbo_method: :post } do %>
           <%= image_tag("refresh.svg", alt: "Refresh", size: "30x30") %>
         <% end %>
       </div>
