--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,15 +1,29 @@
-<div class="loading-container flex-column" data-controller="page" data-page-redirect-url-value="<%= player_signed_in? ? games_path : new_player_session_path %>">
+<div class="loading-container flex-column" data-controller="page">
+  <!-- Logos tournants -->
   <div class="rotating-logos">
     <img src="<%= asset_path('logo1.png') %>" alt="Logo Step 1" class="logo-step logo-step-1">
     <img src="<%= asset_path('logo2.png') %>" alt="Logo Step 2" class="logo-step logo-step-2">
     <img src="<%= asset_path('logo3.png') %>" alt="Logo Step 3" class="logo-step logo-step-3">
   </div>
-  <% if !@player.token  %>
-    <div class ="mt-4">
-      <%= link_to auth_strava_path do %>
-        <%= image_tag 'stravabutton.png', alt: 'Connect with Strava' %>
-      <% end %>
-    </div>
+
+  <!-- Contenu affiché immédiatement si connecté -->
+  <% if player_signed_in? %>
+    <% if @player&.token.nil? %>
+      <div class="button-container">
+        <%= link_to auth_strava_path do %>
+          <%= image_tag 'stravabutton.png', alt: 'Connect with Strava' %>
+        <% end %>
+        <%= link_to "Skip for now", mine_games_path, class: "btn skip-button" %>
+      </div>
+    <% else %>
+      <p>Strava already connected.</p>
+    <% end %>
+  <% else %>
+    <!-- Redirection vers la page de connexion après 3 secondes -->
+    <script>
+      setTimeout(function() {
+        window.location.href = "<%= new_player_session_path %>";
+      }, 3000); // Redirige après 3 secondes
+    </script>
   <% end %>
 </div>
-
