--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -24,7 +24,7 @@ body {
   font-size: 30px;
   font-weight: 900;
   margin: 0;
-  color: #4a90e2;
+  color: $blou;
   padding: 12px 12px;
 }
 
@@ -281,7 +281,7 @@ button.join-game-card {
   font-size: 38px;
   font-weight: 900;
   margin: 0;
-  color: $blouclaire;
+  color: $blou;
   padding: 16px
 }
 
