--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,29 +1,39 @@
-<h2>Sign up</h2>
+<h2 class="text-center">Sign up to Runation</h2>
 
-<%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+<%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { class: 'sign-up-form' }) do |f| %>
   <%= f.error_notification %>
 
   <div class="form-inputs">
     <%= f.input :email,
                 required: true,
                 autofocus: true,
-                input_html: { autocomplete: "email" }%>
+                placeholder: 'Enter your email',
+                input_html: { class: 'input-field', autocomplete: "email" } %>
+
     <%= f.input :password,
                 required: true,
                 hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length),
-                input_html: { autocomplete: "new-password" } %>
+                placeholder: 'Create a password',
+                input_html: { class: 'input-field', autocomplete: "new-password" } %>
+
     <%= f.input :password_confirmation,
                 required: true,
-                input_html: { autocomplete: "new-password" } %>
-    <%= f.input :photo, as: :file %>
+                placeholder: 'Confirm your password',
+                input_html: { class: 'input-field', autocomplete: "new-password" } %>
+
+    <%= f.input :nickname,
+                required: true,
+                placeholder: 'Enter your nickname',
+                input_html: { class: 'input-field', autocomplete: "nickname" } %>
+
+    <%= f.input :photo, as: :file, input_html: { class: 'file-upload' } %>
   </div>
 
   <div class="form-actions">
-    <%= f.button :submit, "Sign up" %>
+    <%= f.button :submit, "Sign up", class: 'submit-button' %>
   </div>
 <% end %>
 
-<%= render "devise/shared/links" %>
 <div class="text-center mt-3">
   <%= link_to "Already have an account? Log in", new_session_path(resource_name), class: "btn btn-link btn-sm d-inline-block" %>
   <%= link_to "Forgot your password?", new_password_path(resource_name), class: "btn btn-link btn-sm d-inline-block" %>
