--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -1,12 +1,12 @@
   <!-- Profile Section -->
-  <div class="text-center mt-3 pt-4">
+  <div class="text-center mt-3 mb-4 pt-4">
     <div class="position-relative d-inline-block">
       <%= link_to edit_player_registration_path, class: 'position-absolute top-0 start-100' do %>
         <i class="fa-regular fa-pen-to-square"></i>
       <% end %>
       <div class="rounded-circle bg-primary">
           <% if current_player.photo.attached? %>
-            <%= cl_image_tag(current_player.photo.key, class: "avatar-base", width: 89, height: 89) %>
+            <%= cl_image_tag(current_player.photo.key, class: "avatar-base", width: 100, height: 100) %>
           <% else %>
             <i class="fa-solid fa-user text-white fs-1 d-flex justify-content-center align-items-center" style="height: 100%;">
           <% end %>
